// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment details page should match the snapshot - Charge query param 1`] = `
<div>
  <div
    class="wcpay-payment-details woocommerce-payments-page"
    style="max-width: 1032px;"
  >
    <div
      class="components-surface components-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-card__body components-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="payment-details-summary"
          >
            <div
              class="payment-details-summary__section"
            >
              <p
                aria-label="Payment amount"
                class="payment-details-summary__amount"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  Amount placeholder
                </span>
              </p>
              <div
                class="payment-details-summary__breakdown"
              >
                
                <p>
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    Fee amount
                  </span>
                </p>
                
                <p>
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    Net amount
                  </span>
                </p>
              </div>
            </div>
            <div
              class="payment-details-summary__section"
            >
              <div
                class="payment-details-summary__id"
              >
                <span
                  aria-busy="true"
                  class="is-loadable-placeholder"
                >
                  Payment ID: pi_xxxxxxxxxxxxxxxxxxxxxxxx
                </span>
              </div>
            </div>
          </div>
        </div>
        <hr
          aria-orientation="horizontal"
          class="components-divider components-card__divider components-card-divider css-yo8r29-DividerView-renderBorder-renderSize-renderMargin-Divider-borderColor e19on6iw0"
          data-wp-c16t="true"
          data-wp-component="CardDivider"
          role="separator"
        />
        <div
          class="components-card__body components-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <span
            aria-busy="true"
            class="is-loadable-placeholder is-block"
          >
            <p
              style="line-height: 4;"
            >
              Block placeholder
            </p>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
    <div
      class="components-surface components-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-flex components-card__header components-card-header css-1e8ifbz-View-Flex-sx-Base-sx-Items-ItemsRow-Header-borderRadius-borderColor-large em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <span
            aria-busy="true"
            class="is-loadable-placeholder"
          >
            Payment method
          </span>
        </div>
        <div
          class="components-card__body components-card-body css-1nonx1n-View-Body-borderRadius-large em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="payment-method-details"
          >
            <div
              class="payment-method-details__column"
            >
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Number
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    •••• 
                    4242
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Expires
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    12 / 2099
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Type
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    Visa credit card
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    ID
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    pm_mock
                  </span>
                </p>
              </div>
            </div>
            <div
              class="payment-method-details__column"
            >
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Owner
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    First Name
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Owner email
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    email@example.com
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Address
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    <span>
                      Line 1 Street
                      <br />
                      Line 2
                      <br />
                      City, CA 99999
                    </span>
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Origin
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    United States of America
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    CVC check
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    Passed
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Street check
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    Passed
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Zip check
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    Passed
                  </span>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;

exports[`Payment details page should match the snapshot - Payment Intent query param 1`] = `
<div>
  <div
    class="wcpay-payment-details woocommerce-payments-page"
    style="max-width: 1032px;"
  >
    <div
      class="components-surface components-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-card__body components-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="payment-details-summary"
          >
            <div
              class="payment-details-summary__section"
            >
              <p
                aria-label="Payment amount"
                class="payment-details-summary__amount"
              >
                $1,500.00
                <span
                  class="payment-details-summary__amount-currency"
                >
                  usd
                </span>
                <span
                  class="chip chip-success"
                >
                  Paid
                </span>
              </p>
              <div
                class="payment-details-summary__breakdown"
              >
                
                <p>
                  Fee: 
                  -$74.00
                </p>
                
                <p>
                  Net: 
                  $1,426.00
                </p>
              </div>
            </div>
            <div
              class="payment-details-summary__section"
            >
              <div
                class="payment-details-summary__id"
              >
                Payment ID: 
                pi_mock
              </div>
            </div>
          </div>
        </div>
        <hr
          aria-orientation="horizontal"
          class="components-divider components-card__divider components-card-divider css-yo8r29-DividerView-renderBorder-renderSize-renderMargin-Divider-borderColor e19on6iw0"
          data-wp-c16t="true"
          data-wp-component="CardDivider"
          role="separator"
        />
        <div
          class="components-card__body components-card-body css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <ul
            class="woocommerce-list woocommerce-list--horizontal"
            role="menu"
          >
            <li
              class="woocommerce-list__item"
            >
              <div
                class="woocommerce-list__item-inner"
              >
                <div
                  class="woocommerce-list__item-text"
                >
                  <span
                    class="woocommerce-list__item-title"
                  >
                    Date
                  </span>
                  <span
                    class="woocommerce-list__item-content"
                  >
                    Jun 22, 2022, 2:16pm
                  </span>
                </div>
              </div>
            </li>
            <li
              class="woocommerce-list__item"
            >
              <div
                class="woocommerce-list__item-inner"
              >
                <div
                  class="woocommerce-list__item-text"
                >
                  <span
                    class="woocommerce-list__item-title"
                  >
                    Channel
                  </span>
                  <span
                    class="woocommerce-list__item-content"
                  >
                    <span>
                      Online
                    </span>
                  </span>
                </div>
              </div>
            </li>
            <li
              class="woocommerce-list__item"
            >
              <div
                class="woocommerce-list__item-inner"
              >
                <div
                  class="woocommerce-list__item-text"
                >
                  <span
                    class="woocommerce-list__item-title"
                  >
                    Customer
                  </span>
                  <span
                    class="woocommerce-list__item-content"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions&search%5B0%5D=First%20Name%20(email%40example.com)"
                    >
                      First Name
                    </a>
                  </span>
                </div>
              </div>
            </li>
            <li
              class="woocommerce-list__item"
            >
              <div
                class="woocommerce-list__item-inner"
              >
                <div
                  class="woocommerce-list__item-text"
                >
                  <span
                    class="woocommerce-list__item-title"
                  >
                    Order
                  </span>
                  <span
                    class="woocommerce-list__item-content"
                  >
                    <span>
                      –
                    </span>
                  </span>
                </div>
              </div>
            </li>
            <li
              class="woocommerce-list__item"
            >
              <div
                class="woocommerce-list__item-inner"
              >
                <div
                  class="woocommerce-list__item-text"
                >
                  <span
                    class="woocommerce-list__item-title"
                  >
                    Payment method
                  </span>
                  <span
                    class="woocommerce-list__item-content"
                  >
                    <span
                      class="payment-method-details"
                    >
                      <button
                        class="wcpay-tooltip__content-wrapper"
                        type="button"
                      >
                        <div
                          class="wcpay-tooltip__content-wrapper"
                        >
                          <span
                            aria-label="Visa"
                            class="payment-method__brand payment-method__brand--visa"
                          />
                        </div>
                      </button>
                       •••• 
                      4242
                    </span>
                  </span>
                </div>
              </div>
            </li>
            <li
              class="woocommerce-list__item"
            >
              <div
                class="woocommerce-list__item-inner"
              >
                <div
                  class="woocommerce-list__item-text"
                >
                  <span
                    class="woocommerce-list__item-title"
                  >
                    Risk evaluation
                  </span>
                  <span
                    class="woocommerce-list__item-content"
                  >
                    –
                  </span>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
    <div
      class="components-surface components-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-flex components-card__header components-card-header css-1e8ifbz-View-Flex-sx-Base-sx-Items-ItemsRow-Header-borderRadius-borderColor-large em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          Timeline
        </div>
        <div
          class="components-card__body components-card-body css-1nonx1n-View-Body-borderRadius-large em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="woocommerce-timeline"
          >
            <p
              class="timeline_no_events"
            >
              No data to display
            </p>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
    <div
      class="components-surface components-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-flex components-card__header components-card-header css-1e8ifbz-View-Flex-sx-Base-sx-Items-ItemsRow-Header-borderRadius-borderColor-large em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          Payment method
        </div>
        <div
          class="components-card__body components-card-body css-1nonx1n-View-Body-borderRadius-large em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="payment-method-details"
          >
            <div
              class="payment-method-details__column"
            >
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Number
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  •••• 
                  4242
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Expires
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  12 / 2099
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Type
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  Visa credit card
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  ID
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  pm_mock
                </p>
              </div>
            </div>
            <div
              class="payment-method-details__column"
            >
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Owner
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  First Name
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Owner email
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  email@example.com
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Address
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span>
                    Line 1 Street
                    <br />
                    Line 2
                    <br />
                    City, CA 99999
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Origin
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  United States of America
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  CVC check
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  Passed
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Street check
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  Passed
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Zip check
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  Passed
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;
